--- a/my-app/package.json
+++ b/my-app/package.json
@@ -45,7 +45,9 @@
   ],
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.2",
-    "bootstrap": "4.6.0",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "bootstrap": "^4.6.0",
     "chart.js": "2.9.4",
     "classnames": "2.2.6",
     "moment": "2.29.1",
@@ -53,6 +55,7 @@
     "node-sass-package-importer": "5.3.2",
     "nouislider": "14.6.3",
     "react": "17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-chartjs-2": "2.11.1",
     "react-copy-to-clipboard": "5.0.3",
     "react-datetime": "3.0.4",
