--- a/my-app/package.json
+++ b/my-app/package.json
@@ -62,7 +62,8 @@
     "react-dom": "17.0.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
-    "reactstrap": "8.9.0"
+    "reactstrap": "8.9.0",
+    "socket.io-client": "^4.0.0"
   },
   "devDependencies": {
     "gulp": "4.0.2",
