--- a/my-app/package.json
+++ b/my-app/package.json
@@ -47,6 +47,7 @@
     "@fortawesome/fontawesome-free": "5.15.2",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@pdftron/webviewer": "^7.3.0",
     "bootstrap": "^4.6.0",
     "chart.js": "2.9.4",
     "classnames": "2.2.6",
